# laconcha

./: .gitignore  .pylintrc  1000.json  Pipfile  main.py  pyproject.toml  run.py
laconcha/: __init__.py  decorators.py  image.py  seed.py  util.py
laconcha/curves/: __init__.py  base.py  operators.py  smooth.py
laconcha/data/: __init__.py  palette.py
laconcha/filters/: __init__.py  base.py  color_quant.py  cropping.py  decorators.py  designs.py  kaleidoscope.py  numpy.py  opencv.py  operators.py  pil.py  saliency.py  scikit.py  tiling.py  transforms.py
laconcha/generators/: __init__.py  function.py  opencv.py  pil.py
laconcha/generators/noise/: __init__.py  random.py
laconcha/operators/: __init__.py  attach.py  blend_modes.py  channels.py  decorators.py  mask.py
laconcha/ranges/: __init__.py  base.py
tests/: test_image.py
