[tool.poetry]
authors = ["Zain Aamer <ZippeyKeys12@gmail.com>"]
description = ""
name = "laconcha"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.25.2"
opencv-contrib-python = "^4.8.0.76"
pillow = "<10"
python = "^3.10"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.0"
streamlit = "^1.26.0"
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
mypy = "^1.5.1"
bandit = "^1.7.5"
autopep8 = "^2.0.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
